<resources>
  <string name="app_name">Math</string>
  <string name="action_settings">Settings</string>

  <string name="no_network_connection">Eat is offline. Please check your network connection.</string>
  <string name="dismiss">Dismiss</string>

  <string name="signed_in_description">Signed in as %s</string>
  
  <string name="tab_content_description_selected">%1$s, selected, tab %2$d of %3$d</string>
  <string name="tab_content_description_unselected">%1$s, tab %2$d of %3$d</string>
  
  <string name="action_home">Home</string>
  <string name="action_debug">Debug console</string>
  <string name="action_help_feedback">Help &amp; feedback</string>

  <string name="grades">Grades</string>
  <string name="pre_k">Pre K</string>
  <string name="kinder">Kinder</string>
  <string name="first_grade">1st</string>
  <string name="second_grade">2nd</string>
  <string name="third_grade">3rd</string>

  <string name="app_welcome">Welcome!</string>
  <string name="button_start_app">Start</string>

  <string name="filter_view_https_cwave">cwave.com</string>

</resources>
